<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tableLayoutSDSBD4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.sge.haltestellenanzeige.activity.Display4Activity"
    android:orientation="vertical"
    android:background="#FF000000">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/leerzeichen1"
                    android:layout_height="wrap_content"
                    android:layout_width="42dp"
                    android:textColor="#FFFFFFFF"
                    android:gravity="left"
                    android:text=" " />

                <TextView
                    android:id="@+id/textView1D4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:textAlignment="gravity"
                    android:text="@string/app_default_haltestelle"
                    android:textColor="#FFFFFFFF"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/changeStationButton"
                    android:layout_width="42dp"
                    android:layout_height="wrap_content"
                    android:text="..." />

                <TextView
                    android:id="@+id/leerzeichen2"
                    android:layout_height="wrap_content"
                    android:layout_width="42dp"
                    android:textColor="#FFFFFFFF"
                    android:gravity="right"
                    android:text=" " />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

            <Button
                android:id="@+id/refreshButtonD4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="14sp"
                android:text="@string/app_aktualisieren_button" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textViewLetzteAktualisierungD4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:textColor="#FFFFFFFF"
                android:gravity="center"
                android:text="@string/app_aktualisierungstext_initial_app" />
        </TableRow>
    </TableLayout>

    <TableLayout
        android:id="@+id/resultTableHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:id="@+id/row0D4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FF666666">


            <TextView
                android:id="@+id/textViewAbfahrt0D4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textColor="#FFFFFFFF"
                android:text="@string/table_head_abfahrt"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewDelay0D4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textColor="#FFFFFFFF"
                android:text="@string/table_head_verspaetung"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewLinie0D4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textColor="#FFFFFFFF"
                android:text="@string/table_head_linie"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewRichtung0D4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:textColor="#FFFFFFFF"
                android:text="@string/table_head_richtung"
                android:textSize="18sp" />
        </TableRow>

    </TableLayout>


    <org.sge.haltestellenanzeige.ui.CustomScrollView
        android:id="@+id/customscrollviewD4"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbars="none"
        android:layout_weight="1">
        <LinearLayout
            android:id="@+id/resultTableD4"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

        </LinearLayout>

    </org.sge.haltestellenanzeige.ui.CustomScrollView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        android:background="@android:drawable/bottom_bar"
        android:gravity="center_vertical">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/buttonBackD4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:gravity="left"
                android:text="@string/app_rueckwaerts"
                android:textSize="14sp" />


            <TextView
                android:id="@+id/textView8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textColor="#FFFFFFFF"
                android:textSize="14sp"
                android:text="    " />


            <TextView
                android:id="@+id/textView9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textColor="#FFFFFFFF"
                android:textSize="14sp"
                android:text="    " />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textColor="#FFFFFFFF"
                android:textSize="14sp"
                android:text="    " />

        </TableRow>
    </LinearLayout>
</LinearLayout>
